--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/nuxt-modules/supabase.git"
   },
   "license": "MIT",
-  "packageManager": "pnpm@10.18.1",
+  "packageManager": "pnpm@10.24.0",
   "exports": {
     ".": {
       "import": "./dist/module.mjs"
@@ -24,29 +24,30 @@
     "build": "nuxt-module-build build",
     "lint": "eslint .",
     "typecheck": "nuxi typecheck",
+    "verify": "pnpm run dev:prepare && pnpm run lint && pnpm run typecheck && pnpm run dev:build && pnpm build",
     "lint:fix": "eslint . --fix",
     "release": "pnpm lint && release-it",
     "pre:release": "pnpm lint && release-it --preRelease"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.74.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.0",
     "defu": "^6.1.4",
     "pathe": "^2.0.3"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.9.0",
-    "@nuxt/kit": "^4.1.3",
+    "@nuxt/eslint": "^1.11.0",
+    "@nuxt/kit": "^4.2.1",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^4.1.3",
-    "@release-it/conventional-changelog": "^10.0.1",
-    "@types/node": "^24.7.0",
+    "@nuxt/schema": "^4.2.1",
+    "@release-it/conventional-changelog": "^10.0.2",
+    "@types/node": "^24.10.1",
     "changelogen": "^0.6.2",
-    "eslint": "^9.37.0",
-    "nuxt": "^4.1.3",
-    "release-it": "^19.0.5",
+    "eslint": "^9.39.1",
+    "nuxt": "^4.2.1",
+    "release-it": "^19.0.6",
     "typescript": "^5.9.3",
-    "vue-tsc": "^3.1.1"
+    "vue-tsc": "^3.1.5"
   },
   "resolutions": {
     "typescript": "5.6.3"
